no se que le pasan a las imagenes

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <section class="container-fluid">
         <div class="row text-center">
             <div class="col-md-6 col-lg-6 col-sm-6">
-                <a href="#"><img src="./img/hero/Captura5.JPG" alt="Vendé" class="img-fluid top" width="500px"></a>
+                <a href="#"><img src="../img/hero/Captura5.JPG" alt="Vendé" class="img-fluid top" width="500px"></a>
             </div>
             <div class="col-md-6 col-lg-6 col-sm-6">
-                <a href="#"><img src="./img/hero/Captura4.JPG" alt="Comprá" class="img-fluid top" width="500px"></a>
+                <a href="#"><img src="../img/hero/Captura4.JPG" alt="Comprá" class="img-fluid top" width="500px"></a>
             </div>
         </div>
     </section>
