Empecé a usar Js y le agregué animacion al inicio

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta property="og:tipe" content="website">
-    <meta property="og:title" content="ROPA BARATA | ENTRE RIOS - ARGENTINA">
+    <meta property="og:title" content="ROPA IMPORTADA | ENTRE RIOS - ARGENTINA">
     <meta property="og:description" content="Explora por nuestra pagina..."> 
     <meta property="og:image" content="img/Captura1"> 
     <meta property="og:name" content="Tienda de ropa online"> 
@@ -17,6 +17,11 @@
     <title>Tienda online</title>
 </head>
 <body>
+    <!--Efecto de carga-->
+    <div class="contenedor_loader">
+        <div class="loader"></div>
+    </div>
+    <!--Termina Efecto de carga-->
     <!--Empieza Header-->
     <header class="container color-header">
         <div class="row">
@@ -63,15 +68,16 @@
     <section class="container-fluid">
         <div class="row text-center">
             <div class="col-md-6 col-lg-6 col-sm-6">
-                <a href="#"><img src="./img/hero/Captura5.jpg" alt="Vendé" class="img-fluid top" width="500px"></a>
+                <a href="./extensions/venta.html"><img src="./img/hero/Captura5.jpg" alt="Vendé" class="img-fluid top" width="500px"></a>
             </div>
             <div class="col-md-6 col-lg-6 col-sm-6">
-                <a href="#"><img src="./img/hero/Captura4.jpg" alt="Comprá" class="img-fluid top" width="500px"></a>
+                <a href="./extensions/compra.html"><img src="./img/hero/Captura4.jpg" alt="Comprá" class="img-fluid top" width="500px"></a>
             </div>
         </div>
     </section>
     <!--Termina Section 1-->
             <!--Los scrips-->
+            <script src="./js/script.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
             <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
             <script>
