Agregué elÃ footer en el index

--- a/index.html
+++ b/index.html
@@ -78,7 +78,62 @@
     <!--Termina Section 1-->
 
     <!--Empieza el footer-->
-    
+    <footer class="container-fluid footer_top">
+        <!--Empieza div row-->
+        <div class="row p-4">
+            <!--Div 1--> 
+            <div class="col-xs-12 col-md-6 col-lg-3 titulo">
+                <a href="./index.html">Tienda online</a>
+            </div>
+            <!--Div 2-->
+            <div class="col-xs-12 col-md-6 col-lg-3">
+                <p class="h5 mb-3">Sobre Nosotros</p>
+                <!--Div 2a-->
+                <div class="mb-3">
+                <a href="./sobremi.html" class="text-secondary text-decoration-none">¿Quienes Somos?</a>
+                </div>
+                <!--Div 2b-->
+                <div class="mb-3">
+                    <a href="sobremi.html" class="text-secondary text-decoration-none">Caracteristicas</a>
+                </div>
+                <!--Div 2c-->
+                <div class="mb-3">
+                    <a href="./sobremi.html" class="text-secondary text-decoration-none">Experiencia</a>
+                </div>
+                <!--Termina 2c-->
+            </div>
+            <!--Div 3-->
+            <div class="col-xs-12 col-md-6 col-lg-3">
+                <p class="h5 mb-3">Links</p>
+                <!--Div 3a-->
+                <div class="mb-3">
+                    <a href="terycon.html" class="text-secondary text-decoration-none">Terminos & Condiciones</a>
+                </div>
+                <!--Div 3b-->
+                <div class="mb-3">
+                    <a href="polypri.html" class="text-secondary text-decoration-none">Privacidad & politica</a>
+                </div>
+            </div>
+            <!--Div 4-->
+            <div class="col-xs-12 col-md-6 col-lg-3">
+                <p class="h5 mb-3">Contacto</p>
+                <!--Div 4a-->
+                <div class="mb-3">
+                    <a href="https://www.instagram.com/nazasoto_/" class="text-secondary text-decoration-none">Instagram</a>
+                </div>
+                <!--Div 4b-->
+                <div class="mb-3">
+                    <a href="https://github.com/Nazarenosoto" class="text-secondary text-decoration-none">Github</a>
+                </div>
+                <!--Div 4c-->
+                <div class="mb-3">
+                    <a href="https://www.facebook.com/nazareno.soto.507" class="text-secondary text-decoration-none">Facebook</a>
+                </div>
+            </div>
+            <!--Termina div4-->
+        </div>
+        <!--Termina div row-->
+        </footer>
     <!--Termina el footer-->
             <!--Los scrips-->
             <script src="./js/script.js"></script>
