Hice un formulario de registro

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav class="container margin">
         <div class="row">
             <div class="col-md-12 col-lg-3 col-sm-12 logo">
-                <a href="#"><img src="./img/hero/Captura.JPG" alt="Logo" class="img-logo"></a>
+                <a href="./index.html"><img src="./img/hero/Captura.JPG" alt="Logo" class="img-logo"></a>
             </div>
             <div class="col-md-12 col-lg-6 col-sm-12">
                         <form class="d-flex busqueda" role="search">
@@ -59,7 +59,7 @@
     <!--Empieza Hero-->
     <div class="container">
         <div class="text-center">
-        <a href=""><img src="./img/hero/Captura3.JPG" alt="" class="img-fluid hero"></a>
+        <a href="./extensions/registrar.html"><img src="./img/hero/Captura3.JPG" alt="" class="img-fluid hero"></a>
         </div>
     </div>
     <!--Termina Hero-->
@@ -76,6 +76,10 @@
         </div>
     </section>
     <!--Termina Section 1-->
+
+    <!--Carousel de marcas-->
+
+    <!--Termina el Carousel-->
 
     <!--Empieza el footer-->
     <footer class="container-fluid footer_top">
@@ -133,7 +137,7 @@
             <!--Termina div4-->
         </div>
         <!--Termina div row-->
-        </footer>
+    </footer>
     <!--Termina el footer-->
             <!--Los scrips-->
             <script src="./js/script.js"></script>
