Hice cosas nuevas en compra

--- a/extensions/compra.html
+++ b/extensions/compra.html
@@ -69,13 +69,14 @@
                 <span class="costo-envio">Envio gratis</span>
                 <span class="prenda">Remera deportiva Nike</span>
                 <div class="calificacion">
-                    <p class="ppp2">⋆⋆⋆⋆</p>
+                    <p class="ppp2">⋆⋆⋆⋆⋆</p>
                 </div>
-                <a href="#">Concordia - Entre Rios</a>
+                <a href="#" class="aa">Comprar</a>
+                <a href="#" class="carrito">Agregar al carrito de compras</a>
             </div>
         </div>
         <!--Segundo producto-->
-        <div class="producto col-md-4 col-lg-3 col-sm-1">
+        <div class="producto col-md-4 col-lg-4 col-sm-1">
             <img src="../img/cards/remera_adidas_1.jpg" alt="Remera deportiva Nike" class="">
             <div class="informacion">
                 <span class="tipo-envio">Envio con normalidad</span>
@@ -85,7 +86,8 @@
                 <div class="calificacion">
                     <p class="ppp2">⋆⋆⋆⋆</p>
                 </div>
-                <a href="#">Concordia - Entre Rios</a>
+                <a href="#" class="aa">Comprar</a>
+                <a href="#" class="carrito">Agregar al carrito</a>
             </div>
         </div>
         <!--Tercer producto-->
@@ -97,13 +99,14 @@
                 <span class="costo-envio">Envio gratis</span>
                 <span class="prenda">Remera deportiva Puma</span>
                 <div class="calificacion">
-                    <p class="ppp2">⋆⋆⋆⋆</p>
+                    <p class="ppp2">⋆⋆⋆⋆⋆</p>
                 </div>
-                <a href="#">Concordia - Entre Rios</a>
+                <a href="#" class="aa">Comprar</a>
+                <a href="#" class="carrito">Agregar al carrito de compras</a>
             </div>
         </div>
         <!--Cuarto producto-->
-        <div class="producto col-md-4 col-lg-3 col-sm-1">
+        <div class="producto col-md-4 col-lg-4 col-sm-1">
             <img src="../img/cards/buzo_simple_1.jpg" alt="Remera deportiva Nike" class=""> 
             <div class="informacion">
                 <span class="tipo-envio">Envio con normalidad</span>
@@ -113,7 +116,8 @@
                 <div class="calificacion">
                     <p class="ppp2">⋆⋆⋆⋆</p>
                 </div>
-                <a href="#">Concordia - Entre Rios</a>
+                <a href="#" class="aa">Comprar</a>
+                <a href="#" class="carrito">Agregar al carrito de compras</a>
             </div>
         </div>
         <!--Quinto producto-->
@@ -125,13 +129,14 @@
                 <span class="costo-envio">Envio gratis</span>
                 <span class="prenda">Buzo Bordado</span>
                 <div class="calificacion">
-                    <p class="ppp2">⋆⋆⋆⋆</p>
+                    <p class="ppp2">⋆⋆⋆⋆⋆</p>
                 </div>
-                <a href="#">Concordia - Entre Rios</a>
+                <a href="#" class="aa">Comprar</a>
+                <a href="#" class="carrito">Agregar al carrito de compras</a>
             </div>
         </div>
         <!--Sexto producto-->
-        <div class="producto col-md-4 col-lg-3 col-sm-1">
+        <div class="producto col-md-4 col-lg-4 col-sm-1">
             <img src="../img/cards/buzo_simple_3.jpg" alt="Remera deportiva Nike" class="">
             <div class="informacion">
                 <span class="tipo-envio">Envio con normalidad</span>
@@ -139,9 +144,10 @@
                 <span class="costo-envio">Envio gratis</span>
                 <span class="prenda">Buzo Hollister</span>
                 <div class="calificacion">
-                    <p class="ppp2">⋆⋆⋆⋆</p>
+                    <p class="ppp2">⋆⋆⋆⋆⋆</p>
                 </div>
-                <a href="#">Concordia - Entre Rios</a>
+                <a href="#" class="aa">Comprar</a>
+                <a href="#" class="carrito">Agregar al carrito de compras</a>
             </div>
         </div>
         </div>
