--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="row p-4">
             <!--Div 1--> 
             <div class="col-xs-12 col-md-6 col-lg-3 titulo">
-                <a href="./index.html">Tienda online</a>
+                <a href="./index.html">NRS</a>
             </div>
             <!--Div 2-->
             <div class="col-xs-12 col-md-6 col-lg-3">
