le encontré la solucion al error en el carrito

--- a/extensions/compra.html
+++ b/extensions/compra.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../scss/style.scss">
     <link rel="stylesheet" href="../css/styleJs.css">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-<body>
+<body class="container-fluid">
+
+    <!--Efecto de carga-->
+    <div class="contenedor_loader">
+        <div class="loader"></div>
+    </div>
+    <!--Termina Efecto de carga-->
 
     <header id="header" class="header">
         <div class="containerr">
@@ -129,7 +136,7 @@
         <div class="row p-4">
             <!--Div 1--> 
             <div class="col-xs-12 col-md-6 col-lg-3 titulo">
-                <h1><a href="./index.html" class="text-decoration-none">NRS</a></h1>
+                <h1><a href="./index.html" class="text-decoration-none titulo">NRS</a></h1>
             </div>
             <!--Div 2-->
             <div class="col-xs-12 col-md-6 col-lg-3">
