--- a/extensions/venta.html
+++ b/extensions/venta.html
@@ -17,12 +17,13 @@
     <title>Tienda online</title>
 </head>
 <body class="boddy">
+
     <!--Efecto de carga-->
     <div class="contenedor_loader">
         <div class="loader"></div>
     </div>
     <!--Termina Efecto de carga-->
-
+    
     <!--Empieza Nav-->
     <nav class="container margin">
         <div class="row">
@@ -37,8 +38,8 @@
             </div>
             <div class="col-md-12 col-lg-2 col-sm-12 col-xs-12 opciones">
                 <a href="../extensions/registrar.html"><img src="../img/icons/persona (2).png" alt="Registrar"></a>
-                <a href="../extensions/favoritos.html"><img src="../img/icons/me-gusta.png" alt="Favoritos"></a>
-                <a href="../extensions/carrito.html"><img src="../img/icons/carrito-de-compras.png" alt="Carrito de compras"></a>
+                <a href="#"><img src="../img/icons/me-gusta.png" alt="Favoritos"></a>
+                <a href="#"><img src="../img/icons/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
         </div>
     </nav>
