--- a/extensions/venta.html
+++ b/extensions/venta.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/plane-alt-solid-24.png" type="image/x-icon">
     <link rel="stylesheet" href="../scss/style.scss">
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="../css/styleJs.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Tienda online</title>
 </head>
@@ -53,6 +53,7 @@
         <button id="btnProduc" class="btn btn-primary btn-sm" role="button">Subir</button>
         <button id="borrarProduc" class="btn btn-danger btn-sm" role="button">Borrar</button>
     </div>
+    <div id="listProduc" class="containerr"></div>
     <!--Termina Tarjetas de productos-->
 
     <!--Empieza el footer-->
@@ -116,11 +117,6 @@
             <!--Los scrips-->
             <script src="../js/script.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-            <script>
-                AOS.init();
-            </script>
             <!--Terminan Los scrips-->
-            
 </body>
 </html>
