--- a/extensions/compra.html
+++ b/extensions/compra.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="../scss/style.scss">
     <link rel="stylesheet" href="../css/styleJs.css">
     <title>Document</title>
+    <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!--SweetAlert-->
+
 </head>
 <body class="container-fluid">
-
     <!--Efecto de carga-->
     <div class="contenedor_loader">
         <div class="loader"></div>
     </div>
     <!--Termina Efecto de carga-->
-
+    <!--Empieza header-->
     <header id="header" class="header">
         <div class="containerr">
             <div class="roww">
@@ -42,7 +44,7 @@
                                         </table>
     
                                         <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
-                                        <a href="#" class="button u-full-width">Comprar Productos</a>
+                                        <a href="#" id="finalizarCompra" class="button u-full-width">Comprar Productos</a>
                                 </div>
                         </li>
                     </ul>
@@ -50,8 +52,9 @@
             </div> 
         </div>
     </header>
-
-        <div id="lista-productos" class="containerr">
+    <!--Termina header-->
+    <!--Lista de productos-->
+    <div id="lista-productos" class="containerr">
             <div class="roww">
                 <div class="four colummns">
                     <div class="card">
@@ -129,9 +132,10 @@
                         </div> <!--.card-->
                 </div>
             </div> <!--.row-->
-        </div>  
-    
-        <footer id="footer" class="footer">
+    </div>  
+    <!--Termina la lista-->
+    <!--Empieza el footer-->
+    <footer id="footer" class="footer">
             <!--Empieza div row-->
         <div class="row p-4">
             <!--Div 1--> 
@@ -186,9 +190,12 @@
             <!--Termina div4-->
         </div>
         <!--Termina div row-->
-        </footer>
+    </footer>
+    <!--Termina el footer-->
+        <!--SweetAlert-->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="../js/carrito.js"></script>
         <script src="../js/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
+    </body>
 </html>
