--- a/extensions/venta.html
+++ b/extensions/venta.html
@@ -11,109 +11,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/plane-alt-solid-24.png" type="image/x-icon">
     <link rel="stylesheet" href="../scss/style.scss">
-
     <link rel="stylesheet" href="../css/styleJs.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Tienda online</title>
 </head>
 <body class="boddy">
 
-    <!--Efecto de carga-->
-    <div class="contenedor_loader">
-        <div class="loader"></div>
+    <section class="error-container">
+        <span><span>4</span></span>
+        <span>0</span>
+        <span><span>4</span></span>
+    </section>
+    <div class="Textto">
+        <h1>¡Ups!, pagina no disponible en estos momentos.</h1>
     </div>
-    <!--Termina Efecto de carga-->
-    
-    <!--Empieza Nav-->
-    <nav class="container margin">
-        <div class="row">
-            <div class="col-md-12 col-lg-3 col-sm-12 logo">
-                <a href="../index.html"><img src="../img/hero/Captura.JPG" alt="Logo" class="img-logo"></a>
-            </div>
-            <div class="col-md-12 col-lg-6 col-sm-12">
-                        <form class="d-flex busqueda" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">🔍️</button>
-                        </form>
-            </div>
-            <div class="col-md-12 col-lg-2 col-sm-12 col-xs-12 opciones">
-                <a href="../extensions/registrar.html"><img src="../img/icons/persona (2).png" alt="Registrar"></a>
-                <a href="#"><img src="../img/icons/me-gusta.png" alt="Favoritos"></a>
-                <a href="#"><img src="../img/icons/carrito-de-compras.png" alt="Carrito de compras"></a>
-            </div>
-        </div>
-    </nav>
-    <!--Termina nav-->
 
-    
-    <!--Tarjetas de productos-->
-    <h2 class="text-center m-2">Publicar Producto</h2>
-    <div class="container text-center" id="ropaIngresada">
-        <input type="text" id="inputProduc" placeholder="Ingrese su producto">
-        <button id="btnProduc" class="btn btn-primary btn-sm" role="button">Subir</button>
-        <button id="borrarProduc" class="btn btn-danger btn-sm" role="button">Borrar</button>
+    <div class="volver">
+        <a href="../index.html">Volver al inicio</a>
     </div>
-    <div id="listProduc" class="containerr"></div>
-    <!--Termina Tarjetas de productos-->
-
-    <!--Empieza el footer-->
-    <footer class="container-fluid footer_top">
-        <!--Empieza div row-->
-        <div class="row p-4">
-            <!--Div 1--> 
-            <div class="col-xs-12 col-md-6 col-lg-3 titulo">
-                <a href="./index.html">NRS</a>
-            </div>
-            <!--Div 2-->
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <p class="h5 mb-3">Sobre Nosotros</p>
-                <!--Div 2a-->
-                <div class="mb-3">
-                <a href="./sobremi.html" class="text-secondary text-decoration-none">¿Quienes Somos?</a>
-                </div>
-                <!--Div 2b-->
-                <div class="mb-3">
-                    <a href="sobremi.html" class="text-secondary text-decoration-none">Caracteristicas</a>
-                </div>
-                <!--Div 2c-->
-                <div class="mb-3">
-                    <a href="./sobremi.html" class="text-secondary text-decoration-none">Experiencia</a>
-                </div>
-                <!--Termina 2c-->
-            </div>
-            <!--Div 3-->
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <p class="h5 mb-3">Links</p>
-                <!--Div 3a-->
-                <div class="mb-3">
-                    <a href="terycon.html" class="text-secondary text-decoration-none">Terminos & Condiciones</a>
-                </div>
-                <!--Div 3b-->
-                <div class="mb-3">
-                    <a href="polypri.html" class="text-secondary text-decoration-none">Privacidad & politica</a>
-                </div>
-            </div>
-            <!--Div 4-->
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <p class="h5 mb-3">Contacto</p>
-                <!--Div 4a-->
-                <div class="mb-3">
-                    <a href="https://www.instagram.com/nazasoto_/" class="text-secondary text-decoration-none">Instagram</a>
-                </div>
-                <!--Div 4b-->
-                <div class="mb-3">
-                    <a href="https://github.com/Nazarenosoto" class="text-secondary text-decoration-none">Github</a>
-                </div>
-                <!--Div 4c-->
-                <div class="mb-3">
-                    <a href="https://www.facebook.com/nazareno.soto.507" class="text-secondary text-decoration-none">Facebook</a>
-                </div>
-            </div>
-            <!--Termina div4-->
-        </div>
-        <!--Termina div row-->
-    </footer>
-    <!--Termina el footer-->
             <!--Los scrips-->
             <script src="../js/script.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
