--- a/extensions/compra.html
+++ b/extensions/compra.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../scss/style.scss">
     <link rel="stylesheet" href="../css/styleJs.css">
-    <title>Document</title>
+    <title>Productos - Tienda online</title>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!--SweetAlert-->
 
 </head>
 <body class="container-fluid">
+
     <!--Efecto de carga-->
     <div class="contenedor_loader">
         <div class="loader"></div>
     </div>
     <!--Termina Efecto de carga-->
+
     <!--Empieza header-->
     <header id="header" class="header">
         <div class="containerr">
@@ -53,6 +55,7 @@
         </div>
     </header>
     <!--Termina header-->
+
     <!--Lista de productos-->
     <div id="lista-productos" class="containerr">
             <div class="roww">
@@ -134,13 +137,14 @@
             </div> <!--.row-->
     </div>  
     <!--Termina la lista-->
+
     <!--Empieza el footer-->
     <footer id="footer" class="footer">
             <!--Empieza div row-->
         <div class="row p-4">
             <!--Div 1--> 
             <div class="col-xs-12 col-md-6 col-lg-3 titulo">
-                <h1><a href="./index.html" class="text-decoration-none titulo">NRS</a></h1>
+                <h1><a href="../index.html" class="text-decoration-none titulo">NRS</a></h1>
             </div>
             <!--Div 2-->
             <div class="col-xs-12 col-md-6 col-lg-3">
@@ -192,10 +196,12 @@
         <!--Termina div row-->
     </footer>
     <!--Termina el footer-->
-        <!--SweetAlert-->
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="../js/carrito.js"></script>
+
+        <!--Los scrips-->
+        <script src="../js/fetch.js"></script>
         <script src="../js/script.js"></script>
+        <script src="../js/carrito.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
 </html>
